# YadroTestTask

./: CMakeLists.txt  README.md
src/: main.cpp  program.cpp  utils.cpp
src/event/: event.cpp  event.h
tests/: test.cpp
tests/input/: test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tests/output/: test10.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
